# docs/swagger.json
@@ -351,7 +351,24 @@
     },
     "definitions": {
         "mixin.CreateCaseRes": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "IsDir": {
+                    "type": "boolean",
+                    "format": "bool",
+                    "example": true
+                },
+                "directoryId": {
+                    "type": "integer",
+                    "format": "int",
+                    "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "format": "string",
+                    "example": "新建目录"
+                }
+            }
         },
         "mixin.DeleteCaseRes": {
             "type": "object"
@@ -404,15 +421,15 @@
         "mixin.GetInfoCaseRes": {
             "type": "object",
             "properties": {
+                "IsDir": {
+                    "type": "boolean",
+                    "format": "bool",
+                    "example": true
+                },
                 "id": {
                     "type": "integer",
                     "format": "uint64",
                     "example": 1
-                },
-                "isDirectory": {
-                    "type": "boolean",
-                    "format": "bool",
-                    "example": true
                 },
                 "name": {
                     "type": "string",
@@ -425,7 +442,24 @@
             "type": "object"
         },
         "mixin.RenameCaseRes": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int",
+                    "example": 1
+                },
+                "isDir": {
+                    "type": "boolean",
+                    "format": "bool",
+                    "example": true
+                },
+                "name": {
+                    "type": "string",
+                    "format": "string",
+                    "example": "a new dir"
+                }
+            }
         },
         "woosh.ProblemDetails": {
             "type": "object",
