# src/util/identity/opid.go
@@ -1,9 +1,9 @@
 package identity
 
 type OpId struct {
-	Real        uint64
-	IsDirectory bool
-	IsRoot      bool
+	Real   uint64
+	IsDir  bool
+	IsRoot bool
 }
 
 func ParseOpId(str string) (OpId, error) {
